@@ -200,7 +200,7 @@ void
 machines_periph_plus3( void )
 {
   base_peripherals();
-  periph_set_present( PERIPH_TYPE_AY, PERIPH_PRESENT_ALWAYS );
+  periph_set_present( PERIPH_TYPE_AY_PLUS3, PERIPH_PRESENT_ALWAYS );
   periph_set_present( PERIPH_TYPE_PARALLEL_PRINTER, PERIPH_PRESENT_OPTIONAL );
   periph_set_present( PERIPH_TYPE_PLUS3_MEMORY, PERIPH_PRESENT_ALWAYS );
 }
